--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ input[type='text'] {
   padding: 5px 10px;
   margin-left: 5px;
   border: none;
-  border-left: 2px solid rgb(205, 205, 205);
+  border-left: 1px solid #ebebeb;
   font-size: 13px;
   color: rgb(184, 184, 184);
 }
@@ -75,9 +75,17 @@ input[type='submit'] {
   border-bottom: 2px solid black;
 }
 
+.col-lg-4 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-height: 250px;
+}
+
 .news-img-size {
   max-width: 100%;
   max-height: 250px;
+  object-fit: fill;
 }
 
 @media screen and (max-width: 480px) {
